<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.tecnocoli.ems50.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_ConnectionFragment"
            app:destination="@id/ConnectionFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_TrainingFragment"
            app:destination="@id/TrainingFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_AboutFragment"
            app:destination="@id/AboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/AboutFragment"
        android:name="com.tecnocoli.ems50.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/fragment_about">

        <action
            android:id="@+id/action_AboutFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.tecnocoli.ems50.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/ConnectionFragment"
        android:name="com.tecnocoli.ems50.ConnectionFragment"
        android:label="@string/connection_fragment_label"
        tools:layout="@layout/fragment_connection">

        <action
            android:id="@+id/action_ConnectionFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/TrainingFragment"
        android:name="com.tecnocoli.ems50.TrainingFragment"
        android:label="@string/training_fragment_label"
        tools:layout="@layout/fragment_training">

        <action
            android:id="@+id/action_TrainingFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>

</navigation>